# uni

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp  sequence_alignment.cpp
1/: PAM1.txt  sequence_alignment.cpp  z2.py  z3.cpp  z3.py
2/: PAM1.txt  z4.py
3/: z6.py  z7.py
bioinf/: README.md
bioinf/1/: blosum50.txt
bioinf/2/: z4.py  z5.py
bioinf/4/: z9.py
bioinf/last_year/: MatrixExp.cpp
doc/: BST.html  SFMLintro.md
oopc++/: README.md
oopc++/lab1-intro/src/: zadatak.cpp
oopc++/lab10-scene/src/: game.h  sceneGraph.cpp  sceneGraph.h  world.cpp  world.h
oopc++/lab11-state/src/: aux_states.h  game.cpp  game.h  snake.h  world.cpp
oopc++/lab12-exprt/: CMakeLists.txt
oopc++/lab12-exprt/src/: main.cpp
oopc++/lab2-stl1/src/: zadatak.cpp
oopc++/lab3-isort/src/: isort.h
oopc++/lab4-stl2/src/: main.cpp
oopc++/lab6-bst/src/: bin_stablo.h  bin_stablo_impl.h  main.cpp
oopc++/lab7-vect/src/: vect.h  vect_impl.h
oopc++/lab8-sfml1/src/: CMakeLists.txt  game.cpp  main.cpp
src/: CMakeLists.txt  aux_states.cpp  aux_states.h  bin_stablo.h  bin_stablo_impl.h  game-v1.cpp  game-v1.h  game-v2.cpp  game-v2.h  game-v3.cpp  game-v3.h  game.cpp  game.h  game_state.h  isort.h  lista.h  main.cpp  main2.cpp  main3.cpp  operations.h  playing_state.cpp  playing_state.h  sceneGraph.cpp  sceneGraph.h  snake.cpp  snake.h  vect.h  vect_impl.h  world.cpp  world.h  zadatak.cpp  zadatak.h
test/: CMakeLists.txt  test-zad.cpp
